# snap-todo-app

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  jenkins.sh  snap-todo-app.cabal  test.sh
ansible/: inventory  playbook.yml
ansible/roles/hi-ogawa.docker/: .travis.yml  README.md
ansible/roles/hi-ogawa.docker/defaults/: main.yml
ansible/roles/hi-ogawa.docker/meta/: .galaxy_install_info  main.yml
ansible/roles/hi-ogawa.docker/tasks/: main.yml
ansible/roles/hi-ogawa.docker/tests/: Vagrantfile  inventory  test.yml
db/: config.txt  config.txt.development  config.txt.docker-development
db/migrations/: 20160501_create_todo_table.sql
nginx-docker/: Dockerfile  nginx.conf
src/: Db.hs  Main.hs  MySite.hs  MySnap.hs  SpecMain.hs  Todo.hs
